added friends objects, styled home screen

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -12,6 +12,9 @@
     <!--FontAwesome Kit Code-->
     <script src="https://kit.fontawesome.com/4e9921963f.js" crossorigin="anonymous"></script>
     <title>Profile Builder</title>
+
+    <!-- My CSS-->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
