--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,19 +11,25 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--FontAwesome Kit Code-->
     <script src="https://kit.fontawesome.com/4e9921963f.js" crossorigin="anonymous"></script>
+    <!--Google Fonts-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
+
     <!-- My CSS-->
     <link rel="stylesheet" href="style.css">
     <title>Welcome to Friend Finder</title>
 </head>
 <div class="container">
     <div class="jumbotron mt-4 text-center">
-        <h1 class="display-4 hhh">Friend Finder</h1>
+      
+        <h1 class="display-4 hhh">Friends Finder</h1>
+    
         <p class="lead">Welcome to The Friend Finder App!</p>
         <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
         <span class="sr-only">Loading...</span>
         <hr class="my-4">
-        <p id="sec-text">Please Answer a few basic questions to help us find you a friend with the greatest compatibility!</p>
-        <a class="btn btn-primary btn-lg" href="survey.html" role="button">Take Survey</a>
+        <p id="sec-text">Please answer a few basic questions to help us find you a friend with the greatest
+            compatibility!</p>
+        <a class="btn btn-primary btn-lg" id="survey-button" href="survey.html" role="button">Take Survey</a>
 
     </div>
 </div>
