--- a/app/public/home.html
+++ b/app/public/home.html
@@ -29,7 +29,7 @@
         <hr class="my-4">
         <p id="sec-text">Please answer a few basic questions to help us find you a friend with the greatest
             compatibility!</p>
-        <a class="btn btn-primary btn-lg" id="survey-button" href="survey.html" role="button">Take Survey</a>
+        <a class="btn btn-primary btn-lg" id="survey-button" href="/survey" role="button">Take Survey</a>
 
     </div>
 </div>
