debugging routes; added home button on surevey page

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -371,6 +371,10 @@
                 <a href="https://github.com/stevencmann2/friend-finder">
                    Github Link
                 </a>
+                |
+                <a href="/">
+                   Home
+                </a>
 
             </div>
     </footer>
