verified routing locally; added links to API github on homescreen

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,9 +20,9 @@
 </head>
 <div class="container">
     <div class="jumbotron mt-4 text-center">
-      
+
         <h1 class="display-4 hhh">Friends Finder</h1>
-    
+
         <p class="lead">Welcome to The Friend Finder App!</p>
         <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
         <span class="sr-only">Loading...</span>
@@ -31,6 +31,15 @@
             compatibility!</p>
         <a class="btn btn-primary btn-lg" id="survey-button" href="/survey" role="button">Take Survey</a>
 
+    </div>
+    <div id="homepage-links">
+        <a href="/api/friends">
+            API Friends List
+        </a>
+        |
+        <a href="https://github.com/stevencmann2/friend-finder">
+            Github Link
+        </a>
     </div>
 </div>
 
@@ -48,9 +57,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
-     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </body>
 
 </html>
