--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -315,7 +315,7 @@
         <footer class="mb-4">
             <div id="footer-links">
                 <!-- NEEEeeeeeeeeeeed tooooooo insertttttttt linkkkkkkk to API API-->
-                <a href="#">
+                <a href="/api/friends">
                     API Friends List
                 </a>
                 |
