debugging comparison logic; properly declared loop varibale in survey.js

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -409,7 +409,7 @@
 
             // validates radio buttons and if all were answered
             function scoreValidator() {
-                for (i = 0; i < scoresArray.length; i++) {
+                for (let i = 0; i < scoresArray.length; i++) {
                     // console.log(scoresArray[i])
                     if (isNaN(scoresArray[i])) {
                         console.log(scoresArray[i])
