--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -307,6 +307,41 @@
 
         </form>
 
+        <!-- MODAL FOR FRIEND MATCH
+        <div class="modal fade" id="friend-modal" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">A Match was Found!</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"></span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Start listening to Carole King because..... You've Got a Friend!
+
+                    </div>
+                    <!--MAY NEED TO DELETE ---- DIV FOR RESPONSE-->
+                    <!-- <div id="friend-reponse-display">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                    </div>
+                </div>
+            </div>
+        </div> --> -->
+
+
+
+
+
+
+
+
+
+
+
         <hr>
 
         <!--Links to API AND REPO-->
@@ -354,7 +389,6 @@
     <script type="text/javascript">
         $("#find-friend").click(function () {
             event.preventDefault();
-
             //get values from form:
             const profileName = $("#name-input").val().trim();
             const profilePhoto = $("#photo-url").val().trim();
@@ -370,28 +404,23 @@
             const q8 = parseInt($("input[name='question8']:checked").val());
             const q9 = parseInt($("input[name='question9']:checked").val());
             const q10 = parseInt($("input[name='question10']:checked").val());
-
             //push to array
             scoresArray.push(q1, q2, q3, q4, q5, q6, q7, q8, q9, q10);
-
             //Define data object 
             let profileData = {
                 name: profileName,
                 photo: profilePhoto,
                 scores: scoresArray
-
             }
             //// validation of the form
             //truthy value to determine if the form is complete
             let formComplete = true;
-
             //validates photo field by searching string for accepted photo file types
             function photoValidation() {
                 if (profileData.photo.toLowerCase().includes("jpeg") || profileData.photo.toLowerCase()
                     .includes("jpg") || profileData
                     .photo.toLowerCase().includes("png") || profileData.photo.toLowerCase().includes("gif")) {
                     return formComplete = true;
-
                 } else {
                     alert(
                         'Please use a valid image URL with one of the following formats: .jpeg, .jpg, .png, .gif'
@@ -406,7 +435,6 @@
                     return formComplete = false
                 }
             };
-
             // validates radio buttons and if all were answered
             function scoreValidator() {
                 for (let i = 0; i < scoresArray.length; i++) {
@@ -416,38 +444,27 @@
                         alert("Please answer all the click box questions to find a friend")
                         return formComplete = false
                     }
-
                 };
-
             };
-
-
             ///////// CONSOLE THE DATA OBJECT
             console.log(profileData)
             console.log(formComplete)
-
             function friendFinder() {
                 ///// run the post method upon form completion
                 if (formComplete == false) {
                     console.log(formComplete)
                 } else {
                     console.log(formComplete)
-
                     const currentURL = window.location.origin;
                     $.post(currentURL + "/api/friends", profileData, function (data) {
                             //looking to see if data was posted by user
                             if (data) {
                                 alert("Looking for friends.....");
                             }
-
                         }
-
                     )
                 }
-
-
             };
-
             /// RUN THE API POST  
             // RUN THE FUNCTOINS TO VALIDATE THE FORM
             console.log(formComplete)
@@ -456,9 +473,6 @@
             scoreValidator();
             friendFinder()
             console.log(profileData)
-
-
-
         });
     </script>
 </body>
