debugged and cleaned backend logic

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -321,7 +321,7 @@
                         Start listening to Carole King because..... You've Got a Friend!
 
                     </div>
-                    <!--MAY NEED TO DELETE ---- DIV FOR RESPONSE-->
+                    MAY NEED TO DELETE ---- DIV FOR RESPONSE-->
                     <!-- <div id="friend-reponse-display">
                     </div>
                     <div class="modal-footer">
@@ -330,7 +330,7 @@
                     </div>
                 </div>
             </div>
-        </div> --> -->
+        </div> 
 
 
 
